--- a/scss/_mediadeskt.scss
+++ b/scss/_mediadeskt.scss
@@ -29,7 +29,7 @@
         }
        .promo {
         grid-area: promo;
-        background-color: #C2E4EC;
+        background-color: $colorCeles;
         text-align: center;
         padding-top: 12px;
         font-weight: bold;
@@ -69,7 +69,7 @@
         li {
             padding: 15px;  
             &:hover {
-                background-color: #C2E4EC;
+                background-color: $colorCeles;
                 transform: scale(1.1);
                 transition: all 0.3s;
                 box-shadow: 0px 0px 10px 0px rgba(0, 0, 0,0.5);
@@ -187,7 +187,7 @@
         }
              
     .colorPhone {
-        color: #F7C4D5;
+        color: $colorRosa;
         font-weight: bold;        
         }
     #mostrarMenuMedios,.mostrarMenuMediosMod ,#mostrarMenuSeguinos ,.mostrarMenuSeguinosMod,#mostrarMenuInformar,.mostrarMenuInformarMod,#mostrarMenuNosotros ,.mostrarMenuNosotrosMod,#mostrarMenuAyudarte,.mostrarMenuAyudarteMod {
@@ -247,7 +247,7 @@
                         color: white;
                         text-decoration: none;
                         &:hover{
-                            color:#C2E4EC
+                            color:$colorCeles;
                         }
                     }
                 }
